# vecrocks

./: .clang-format  .gitignore  CMakeLists.txt  README_stream.md  Readme.md
cmake/: faiss.cmake  fmt.cmake  gtest.cmake  json.cmake  nlohmann.cmake  rocksdb.cmake
docs/: design.md
example/: CMakeLists.txt  example.cpp
include/: aux_utils.h  codec.h  cosine_similarity.h  ctpl_stl.h  distance.h  index.h  metadata.h  parameters.h  percentile_stats.h  pq_flash_index.h  utils.h  vecrocks.h
include/v2/: index_merger.h  merge_insert.h
include/vecrocks/: id_generator.h  kv.h  kvcache.h  options.h  vecrocks.h
src/: CMakeLists.txt  aux_utils.cpp  codec.cpp  codec.h  distance.cpp  index.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition_and_pq.cpp  pq_flash_index.cpp  utils.cpp  vecrocks.cpp  windows_aligned_file_reader.cpp
src/dll/: CMakeLists.txt
src/v2/: index_merger.cpp  merge_insert.cpp
src/vecrocks/: vecrocks.cpp
test/: test.cpp
tests/: CMakeLists.txt  lazy_reinsert_batch.cpp  search_disk_index.cpp  search_memory_index.cpp  test_build_kv_disk_index.cpp  test_concurr_merge_insert.cpp  test_id_generator.cpp  test_incremental_index.cpp  test_pq_flash_index.cpp  test_stream_merge.cpp  test_vecrocks.cpp
tests/utils/: compute_groundtruth.cpp  convert_axon_to_bin.cpp  extract_rows.cpp  float_bin_to_int8.cpp  fvecs_to_bin.cpp  seed_index_merger.cpp  test_l2_avx.cpp
