# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

set(CMAKE_CXX_STANDARD 17)

if(MSVC)
	add_subdirectory(dll)
else()
	#file(GLOB CPP_SOURCES *.cpp)
	set(CPP_SOURCES ann_exception.cpp aux_utils.cpp index.cpp
        linux_aligned_file_reader.cpp math_utils.cpp memory_mapper.cpp
        partition_and_pq.cpp  pq_flash_index.cpp logger.cpp distance.cpp
		 utils.cpp v2/graph_delta.cpp v2/index_merger.cpp v2/merge_insert.cpp vecrocks/vecrocks.cpp)
	add_library(${PROJECT_NAME} ${CPP_SOURCES} ../include/vecrocks/kvcache.h)
	add_library(${PROJECT_NAME}_s STATIC ${CPP_SOURCES})
	target_link_libraries(${PROJECT_NAME} PRIVATE rocksdb)
	target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)


endif()
install()
